--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+  body{
+    font-family: 'Poppins', sans-serif;
   }
+
+  .container{
+    max-width: 1280px;
+    margin: 0 auto;
+
+  }
+
+  button{
+    all: unset;
+    padding: 6px 16px;
+    background-color: rgb(173, 44, 44);
+    height: 32px;
+    color: aliceblue;
+    font-weight: 500;
+    
+
+  }
+
+  nav{
+    display: flex;
+    justify-content: space-between;
+     height: 72px;
+    align-items: center;
+  }
+  
+  nav ul{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+
+.hero{
+  display: flex;
+  align-items: center;
+  height: calc(100vh-72px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero-content{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 36px;
 }
 
-.App-link {
-  color: #61dafb;
+.hero h1{
+  margin-bottom: auto;
+  font-weight: 800;
+  font-style: normal;
+  line-height: 102px;
+  font-size: 108px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.hero p{
+  font-weight: 600;
+  color:rgb(43, 42, 42);
+  max-width: 500px;
+}
+
+.hero-btn{
+  display: flex;
+  gap: 40px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .hero-btn button{
+    font-size: 24px;
   }
+
+.secondary-btn{
+ background: transparent;
+ color: black;
+ border: 1px solid gray;
+}
+
+.shopping p{
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.brand-icon{
+  display: flex;
+  gap: 16px;
 }
